@@ -78,7 +78,7 @@ public abstract class HtmlPage extends TextView {
 
   @Override
   public void render() {
-    puts(DOCTYPE);
+    putWithoutEscapeHtml(DOCTYPE);
     render(page().html().meta_http("X-UA-Compatible", "IE=8")
         .meta_http("Content-type", MimeType.HTML));
     if (page().nestLevel() != 0) {
