@@ -414,6 +414,8 @@ Release 2.8.0 - UNRELEASED
 
     YARN-3592. Fix typos in RMNodeLabelsManager. (Sunil G via devaraj)
 
+    YARN-3589. RM and AH web UI display DOCTYPE wrongly. (Rohith via ozawa)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
